bat.bool1.sumdouble.SumDouble.scala.error
Compilation error:
SumDouble:4: error: 'case' expected but '(' found.
    (i,i) => return 4*i
    ^SumDouble:5: error: '}' expected but ';' found.
    _     => return a+b
^SumDouble:9: error: eof expected but '}' found.
}
^