bat.bool1.sumdouble.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {
  (a,b) match{
    (i,i) => return 4*i
    _     => return a+b
  }
}